added sitemap plugin

--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "docpad-plugin-livereload": "~2.6.0",
     "docpad-plugin-moment": "~2.0.2",
     "docpad-plugin-multimarkdown": "~2.0.0",
-    "docpad-plugin-rss": "~2.1.4"
+    "docpad-plugin-rss": "~2.1.4",
+    "docpad-plugin-sitemap": "~2.2.0"
   },
   "main": "node_modules/docpad/bin/docpad-server",
   "scripts": {
